# Neural-Data-Pipeline

./: .gitignore  LICENSE  README.md  config.yaml  config_script.bash  environment.yaml  pyproject.toml
.github/workflows/: testsuit.yaml
docs/: functional_spec_summary.md  my_contribution.md  testing_strategy.md
examples/: example_usage.py
src/cse583_human_say_monkey_do/: core.py  data_loading.py  load_config.py
src/data_pipeline/: analysis.py  data_formatting.py  visualization.py
tests/: test_core.py  test_data_download_structure.py  test_get_nwbs.py  test_lda.py  test_load_config.py  test_movement_onset.py  test_plotting.py  test_pos_and_window.py  test_princess.py  test_smoke_aj.py  test_spikes.py  test_spikes_aligned.py  test_spikes_binned.py  test_zach.py  yici_test.py
